kubernetes/apps/base/linkding/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  # annotations:
  #   instrumentation.opentelemetry.io/inject-python: "true"
