kubernetes/apps/base/linkding/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkding
  template:
    metadata:
      labels:
        app.kubernetes.io/name: linkding
    spec:
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
        - name: linkding
          image: "ghcr.io/sissbruecker/linkding:1.47.0-plus-alpine"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: linkding-data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-pvc
