kubernetes/apps/base/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
  labels:
    app.kubernetes.io/name: linkding
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: linkding
